topUp implementation
