# src/main/kotlin/invest/collect/com/entities/Transaction.kt
@@ -1,0 +1,9 @@
+package invest.collect.com.entities
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class Transaction(
+    val userId: Long,
+    val moneyAmount: Int
+)
