# src/main/resources/openapi/documentation.yaml
@@ -1,23 +1,83 @@
 openapi: "3.0.3"
 info:
-  title: "Application API"
-  description: "Application API"
+  title: "Collect_Invest_Financial_Sevice API"
+  description: "Collect_Invest_Financial_Sevice API"
   version: "1.0.0"
 servers:
-  - url: "http://0.0.0.0:8080"
+- url: "https://localhost:8080"
 paths:
-  /:
+  /ws:
     get:
-      description: "Hello World!"
+      description: ""
+      parameters:
+      - name: "Connection"
+        in: "header"
+        required: true
+        description: "Websocket Connection parameter"
+        schema:
+          type: "string"
+      - name: "Upgrade"
+        in: "header"
+        required: true
+        description: "Websocket Upgrade parameter"
+        schema:
+          type: "string"
+      - name: "Sec-WebSocket-Key"
+        in: "header"
+        required: true
+        description: "Websocket Sec-WebSocket-Key parameter"
+        schema:
+          type: "string"
+      responses:
+        "101":
+          description: "Switching Protocols"
+          headers:
+            Connection:
+              required: true
+              schema:
+                type: "string"
+            Upgrade:
+              required: true
+              schema:
+                type: "string"
+            Sec-WebSocket-Accept:
+              required: true
+              schema:
+                type: "string"
+  /topUp:
+    put:
+      description: ""
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: "#/components/schemas/Transaction"
+        required: true
       responses:
         "200":
           description: "OK"
           content:
-            text/plain:
+            'application/json':
+              schema:
+                type: "integer"
+                format: "int32"
+        "400":
+          description: "Bad Request"
+          content:
+            'application/json':
               schema:
                 type: "string"
               examples:
                 Example#1:
-                  value: "Hello World!"
+                  value: "Error while updating balance"
 components:
   schemas:
+    Transaction:
+      type: "object"
+      properties:
+        userId:
+          type: "integer"
+          format: "int64"
+        moneyAmount:
+          type: "integer"
+          format: "int32"
